--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shadcn-ui-monorepo",
+  "name": "bryzol-pl",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -15,7 +15,6 @@
   "devDependencies": {
     "@biomejs/biome": "2.1.1",
     "@workspace/typescript-config": "workspace:*",
-    "prettier": "^3.5.1",
     "turbo": "^2.4.2",
     "typescript": "5.7.3"
   },
